--- a/index.html
+++ b/index.html
@@ -23,22 +23,29 @@
 <body>
     <div class="container-fluid box">
         <div class="container">
+<!-- *************************Heading Section*************************-->
             <div class="row d-flex justify-content-center text-center pb-3 mb-3">
                 <h1>
                     Calculator Using JavaScript
                 </h1>
             </div>
+
+<!-- *************************Calculator Section*************************-->
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-sm-11 col-md-6 col-lg-3 main_box">
                     <div class="container-fluid p-0">
-                        <div class="row">
+
+<!-- *************************Display Section*************************-->
+                        <div class="row">         
                             <div class="col px-2 pt-2 pb-1">
                                 <div id="calculation_sec" class="display_sec my-1 ">
                                     <input id="display" class="text-end px-2 py-3" />
                                 </div>
                             </div>
                         </div>
+
                         <div class="row options">
+<!-- *************************DEG_F-e Section*************************-->
                             <div class="col-5 py-2">
                                 <button class="deg" onclick="enter_value('deg')">
                                     DEG
@@ -47,6 +54,8 @@
                                     F-E
                                 </button>
                             </div>
+
+<!-- *************************Memory Button Section*************************-->
                             <div class="col-12 memory_sec justify-content-evenly ">
                                 <button class="memory_btn" id="mc" onclick="mc()" disabled>
                                     MC
@@ -66,6 +75,7 @@
                             </div>
                             <div class="col-12 d-flex p-0 py-2">
 
+<!-- *************************Trigonometric Functions Section*************************-->
                                 <div class="dropdown p-0">
                                     <button class="btn dropdown-toggle border-0" type="button" id="dropdownMenuButton1"
                                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -168,6 +178,8 @@
                                         </div>
                                     </div>
                                 </div>
+
+<!-- *************************Functions Section*************************-->
                                 <div class="dropdown p-0">
                                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
                                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -190,6 +202,8 @@
                                 </div>
                             </div>
                         </div>
+
+<!-- *************************Buttons Section*************************-->
                         <div class="row number_sec">
                             <div class="col">
                                 <div class="container-fluid m-0 p-0">
