--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <!-- *************************Calculator Section*************************-->
             <div class="row d-flex justify-content-center">
-                <div class="col-12 col-sm-11 col-md-6 col-lg-3 main_box">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 main_box">
                     <div class="container-fluid p-0">
 
                         <!-- *************************Display Section*************************-->
