Trigo Functions Modified

--- a/Scientific Calculator/index.html
+++ b/Scientific Calculator/index.html
@@ -96,83 +96,83 @@
                                         <div class="trigo_func" id="trigo_func">
                                             <ul class="list d-flex flex-wrap">
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_trigo(Math.sin)">Sin</button></li>
+                                                        onclick="enter_value('sin')">Sin</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="csc_sec_cot_trigo(Math.sin)">Cosec</button></li>
+                                                        onclick="enter_value('cosec')">Cosec</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_trigo(Math.cos)">Cos</button></li>
+                                                        onclick="enter_value('cos')">Cos</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="csc_sec_cot_trigo(Math.cos)">sec</button></li>
+                                                        onclick="enter_value('sec')">sec</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_trigo(Math.tan)">Tan</button></li>
+                                                        onclick="enter_value('tan')">Tan</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="csc_sec_cot_trigo(Math.tan)">cot</button></li>
+                                                        onclick="enter_value('cot')">cot</button></li>
                                             </ul>
                                         </div>
                                         <div id="hyp_trigo_func">
                                             <ul class="list d-flex flex-wrap">
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_sin_cos_tan_func(Math.sinh)">Sinh</button></li>
+                                                        onclick="enter_value('sinh')">Sinh</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_csc_sec_cot_func('1/Math.sinh')">Cosech</button>
+                                                        onclick="enter_value('cosech')">Cosech</button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_sin_cos_tan_func(Math.cosh)">Cosh</button></li>
+                                                        onclick="enter_value('cosh')">Cosh</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_csc_sec_cot_func(1/Math.cosh)">sech</button></li>
+                                                        onclick="enter_value('sech')">sech</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_sin_cos_tan_func(Math.tanh)">Tanh</button></li>
+                                                        onclick="enter_value('tanh')">Tanh</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_csc_sec_cot_func(Math.tanh)">coth</button></li>
+                                                        onclick="enter_value('coth')">coth</button></li>
                                             </ul>
                                         </div>
                                         <div id="inverse_trigo_func">
                                             <ul class="list d-flex flex-wrap ">
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_inv_trigo(Math.asin)">Sin
+                                                        onclick="enter_input('asin')">Sin
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_inv_trigo(Math.asin)">Cosec
+                                                        onclick="enter_input('acosec')">Cosec
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_inv_trigo(Math.acos)">Cos
+                                                        onclick="enter_input('acos')">Cos
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_inv_trigo(Math.acos)">sec
+                                                        onclick="enter_input('asec')">sec
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_inv_trigo(Math.atan)">Tan
+                                                        onclick="enter_input('atan')">Tan
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="sin_cos_tan_inv_trigo(Math.atan)">cot
+                                                        onclick="enter_input('acot')">cot
                                                         <sup>-1</sup></button></li>
                                             </ul>
                                         </div>
                                         <div id="hyp_inverse_trigo_func">
                                             <ul class="list d-flex flex-wrap ">
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_sin_cos_tan_func(Math.asinh)">Sinh
+                                                        onclick="enter_input('asinh')">Sinh
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_csc_sec_cot_func(Math.asinh)">Cosech
+                                                        onclick="enter_input('acosech')">Cosech
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_sin_cos_tan_func(Math.acosh)">Cosh
+                                                        onclick="enter_input('acosh')">Cosh
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_csc_sec_cot_func(Math.acosh)">sech
+                                                        onclick="enter_input('asech')">sech
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_sin_cos_tan_func(Math.atanh)">Tanh
+                                                        onclick="enter_input('atanh')">Tanh
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="hyp_csc_sec_cot_func(Math.atanh)">coth
+                                                        onclick="enter_input('acoth')">coth
                                                         <sup>-1</sup></button></li>
                                             </ul>
                                         </div>
