--- a/Scientific Calculator/index.html
+++ b/Scientific Calculator/index.html
@@ -39,7 +39,7 @@
                         <div class="row">
                             <div class="col px-2 pt-2 pb-1">
                                 <div id="calculation_sec" class="display_sec my-1 ">
-                                    <input id="display" class="text-end px-2 py-3" />
+                                    <input id="display" class="text-end px-2 py-3" disabled/>
                                 </div>
                             </div>
                         </div>
