--- a/Scientific Calculator/index.html
+++ b/Scientific Calculator/index.html
@@ -98,7 +98,7 @@
                                                 <li class="w-50"><button class="dropdown-item text-center"
                                                         onclick="enter_value('sin')">Sin</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_value('cosec')">Cosec</button></li>
+                                                        onclick="enter_value('cosec')">Csc</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
                                                         onclick="enter_value('cos')">Cos</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
@@ -114,7 +114,7 @@
                                                 <li class="w-50"><button class="dropdown-item text-center"
                                                         onclick="enter_value('sinh')">Sinh</button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_value('cosech')">Cosech</button>
+                                                        onclick="enter_value('cosech')">Csch</button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
                                                         onclick="enter_value('cosh')">Cosh</button></li>
@@ -133,7 +133,7 @@
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acosec')">Cosec
+                                                        onclick="enter_input('acosec')">Csc
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
                                                         onclick="enter_input('acos')">Cos
@@ -158,7 +158,7 @@
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acosech')">Cosech
+                                                        onclick="enter_input('acosech')">Csch
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
                                                         onclick="enter_input('acosh')">Cosh
