--- a/Scientific Calculator/index.html
+++ b/Scientific Calculator/index.html
@@ -129,50 +129,50 @@
                                         <div id="inverse_trigo_func">
                                             <ul class="list d-flex flex-wrap ">
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('asin')">Sin
+                                                        onclick="enter_value('asin')">Sin
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acosec')">Csc
+                                                        onclick="enter_value('acosec')">Csc
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acos')">Cos
+                                                        onclick="enter_value('acos')">Cos
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('asec')">sec
+                                                        onclick="enter_value('asec')">sec
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('atan')">Tan
+                                                        onclick="enter_value('atan')">Tan
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acot')">cot
+                                                        onclick="enter_value('acot')">cot
                                                         <sup>-1</sup></button></li>
                                             </ul>
                                         </div>
                                         <div id="hyp_inverse_trigo_func">
                                             <ul class="list d-flex flex-wrap ">
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('asinh')">Sinh
+                                                        onclick="enter_value('asinh')">Sinh
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acosech')">Csch
+                                                        onclick="enter_value('acosech')">Csch
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acosh')">Cosh
+                                                        onclick="enter_value('acosh')">Cosh
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('asech')">sech
+                                                        onclick="enter_value('asech')">sech
                                                         <sup>-1</sup></button></li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('atanh')">Tanh
+                                                        onclick="enter_value('atanh')">Tanh
                                                         <sup>-1</sup></button>
                                                 </li>
                                                 <li class="w-50"><button class="dropdown-item text-center"
-                                                        onclick="enter_input('acoth')">coth
+                                                        onclick="enter_value('acoth')">coth
                                                         <sup>-1</sup></button></li>
                                             </ul>
                                         </div>
