--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- googlefont api -->
+    <!-- Material icon link -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
@@ -31,9 +31,9 @@
 
 <body>
     <!-- ========== Start Navbar ========== -->
-    <div class="container header ">
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid my-2">
+    <div class="container-fluid header " id="navBar">
+        <nav class="navbar navbar-light navbar-expand-lg ">
+            <div class="container my-2">
                 <a class="navbar-brand d-lg-none" href="#"><img src="./img/Group 39.svg" class="img-fluid" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -43,7 +43,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav align-items-center mb-2 mb-lg-0">
                         <li>
-                            <a class="nav-link active pages" aria-current="page">Home</a>
+                            <a class="pages nav-link active " aria-current="page">Home</a>
                         </li>
                         <li>
                             <a class="nav-link active pages" aria-current="page"
@@ -55,14 +55,14 @@
                         </li>
                         <li>
                             <a class="nav-link active pages" aria-current="page"
-                                onclick="scrolltoSection(aboutPage)">About Us</a>
+                                onclick="scrolltoSection(aboutpage)">About Us</a>
                         </li>
                         <li class="nav-item d-md-flex d-none mb-auto ms-auto">
                             <a class="navbar-brand d-none d-lg-block" href="#"><img src="./img/Group 39.svg" alt=""></a>
                         </li>
                         <li class="nav-item d-flex ms-lg-auto">
                             <form class="d-sm-flex align-items-center">
-                                <div class="searchbox d-flex border-0 shadow p-1 bg-white rounded-3 ">
+                                <div class="searchBox d-flex border-0 shadow p-1 bg-white rounded-3 ">
                                     <img src="./img/search_small.svg" class="p-1" alt="">
                                     <input class="form-control me-2 border-0" type="search" placeholder="Search"
                                         aria-label="Search">
@@ -75,11 +75,12 @@
             </div>
         </nav>
     </div>
-    <button id="back-to-top-btn">Back to top</button>
+    <!-- <hr class="m-0"> -->
+    <button id="backToTopBtn">Back to top</button>
 
     <!-- ========== End Navbar ========== -->
     <div class="container-fluid ">
-        <div class="row pb-5">
+        <div class="row pb-5" id="homePage">
             <div class="col homepage">
                 <!-- ========== Start homeSection ========== -->
                 <div class="row justify-content-center">
@@ -89,7 +90,7 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <div class="textarea">
+                                            <div class="textArea">
                                                 <h1>Get 50% OFFER NOW!!</h1>
                                                 <P>One year pieces to poeces guarantee, if you
                                                     are not if you are
@@ -105,10 +106,10 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="Page">
+                                    <div class="page">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <div class="textarea">
+                                                <div class="textArea">
                                                     <h1>Get 50% OFFER NOW!!</h1>
                                                     <P>One year pieces to poeces guarantee, if you
                                                         are not if you are
@@ -125,10 +126,10 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="Page">
+                                    <div class="page">
                                         <div class="row">
                                             <div class="col-md-5">
-                                                <div class="textarea">
+                                                <div class="textArea">
                                                     <h1>Get 50% OFFER NOW!!</h1>
                                                     <P>One year pieces to poeces guarantee, if you
                                                         are not if you are
@@ -161,12 +162,15 @@
                 <!-- ========== End homeSection ========== -->
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- ========== Start productSection ========== -->
     <div class="row pt-3 pb-5">
-        <div class="col secondpage" id="productPage">
-            <div class="row">
-                <div class="col-md-4  p-md-2 d-flex justify-content-center">
+        <div class="col secondPage" id="productPage">
+            <div class="row justify-content-between">
+                <div class="col-12 mb-4 d-flex justify-content-center">
+                    <h1 class="secondHeading">PRODUCT</h1>
+                </div>
+                <div class="col-md-3  p-md-3 d-flex justify-content-center">
                     <div class="card my-card">
                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body my-card-body">
@@ -185,7 +189,7 @@
                 </div>
                 <div class="col-md-8 p-0 m-0">
                     <div class="sec_part_head d-flex align-items-center justify-content-between">
-                        <div class="second_heading d-flex ">
+                        <div class="secondHeading d-flex ">
                             <img src="./img/Group 12.svg" class="img-fluid" alt="">
                             <h5 class="p-2 mt-2"><b>FEATURED</b></h5>
                         </div>
@@ -195,79 +199,79 @@
                         <div class="row">
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <div class="card my-card3">
+                                    <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
                                             <div class="card-box">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
-                                            <button class="btn btn-sm rounded secondpage_btn">ADD TO
+                                            <button class="btn btn-sm rounded secondPage_btn">ADD TO
                                                 CART</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <div class="card my-card3">
+                                    <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
                                             <div class="card-box">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
-                                            <button class="btn btn-sm rounded secondpage_btn">ADD TO
+                                            <button class="btn btn-sm rounded secondPage_btn">ADD TO
                                                 CART</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <div class="card my-card3">
+                                    <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
                                             <div class="card-box">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
-                                            <button class="btn btn-sm rounded secondpage_btn">ADD TO
+                                            <button class="btn btn-sm rounded secondPage_btn">ADD TO
                                                 CART</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <div class="card my-card3">
+                                    <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
                                             <div class="card-box">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
-                                            <button class="btn btn-sm rounded secondpage_btn">ADD TO
+                                            <button class="btn btn-sm rounded secondPage_btn">ADD TO
                                                 CART</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <div class="card my-card3">
+                                    <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
                                             <div class="card-box">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
-                                            <button class="btn btn-sm rounded secondpage_btn">ADD TO
+                                            <button class="btn btn-sm rounded secondPage_btn">ADD TO
                                                 CART</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <div class="card my-card3">
+                                    <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
                                             <div class="card-box">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
-                                            <button class="btn btn-sm rounded secondpage_btn">ADD TO
+                                            <button class="btn btn-sm rounded secondPage_btn">ADD TO
                                                 CART</button>
                                         </div>
                                     </div>
@@ -278,9 +282,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row my-5 scrollDown">
                 <div class="col-12 d-flex justify-content-center">
-                    <button onclick="scrolltoSection(shopSection)">Continue Shopping !!!!</button>
+                    <button class="btn" onclick="scrolltoSection(shopSection)">Continue Shopping !!!!</button>
                 </div>
             </div>
         </div>
@@ -288,11 +292,11 @@
 
         <!-- ========== Start shopSection ========== -->
         <div class="row pt-3 pb-5" id="shopSection">
-            <div class="col thirdpage">
+            <div class="col thirdPage">
                 <div class="container">
                     <div class="row pt-3 pb-4">
                         <div class="col-12 col-sm-4 d-flex justify-content-center">
-                            <h1 class="third_heading">SHOP</h1>
+                            <h1 class="thirdHeading">SHOP</h1>
                         </div>
                         <div class="col-12 col-sm-8 mb-3 mb-md-0 d-flex align-items-center justify-content-end">
                             <p class="m-0 mx-2">Showing 1-12 of 36 results</p>
@@ -424,7 +428,7 @@
                                                         <li class="color-item" id="Green"></li>
                                                     </ul>
                                                 </div>
-                                                <button class="btn btn-sm  btn-dark">ADD TO CART</button>
+                                                <button class="btn btn-sm btn-dark">ADD TO CART</button>
                                             </div>
                                         </div>
                                     </div>
@@ -504,30 +508,24 @@
                 </div>
             </div>
         </div>
-
         <!-- ========== End shopSection ========== -->
         <!-- ========== Start aboutSection ========== -->
-        <div class="row justify-content-center pb-3 pt-5 fourthpage" id="aboutPage">
+        <div class="row justify-content-center pb-3 pt-5 fourthpage" id="aboutpage">
             <div class="col-md-5">
                 <h3 class="pb-3">ABOUT DSHOP</h3>
-                <P>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welcome to Dshop, where you'll find everything
-                    you need to live your best life. From fashion and beauty to home decor and electronics, we've got
-                    you
-                    covered. Our carefully curated selection of products is designed to help you save time and money, so
-                    you
-                    can focus on the things that matter most. Browse our collections and discover the perfect items for
-                    you.<br><br>
+                <p>&emsp;&emsp;Welcome to Dshop, where you'll find everything you need to live your best life. From
+                    fashion and beauty to home decor and electronics, we've got you covered. Our carefully curated
+                    selection of products is designed to help you save time and money, so you can focus on the things
+                    that matter most. Browse our collections and discover the perfect items for you.</p>
 
-                    &nbsp;&nbsp;&nbsp;&nbsp;Explore our wide range of categories to find exactly what you're looking
-                    for.
-                    Whether you need a new outfit for a night out or a kitchen gadget to make meal prep a breeze, we've
-                    got
-                    it all. Shop by category and discover new and exciting products.<br><br>
+                <p>&emsp;Browse our wide range of categories to find exactly what you're looking for. Whether you need a
+                    new outfit for a night out or a kitchen gadget to make meal prep a breeze, we've got it all. Shop by
+                    category and discover new and exciting products.</p>
 
-                    &nbsp;&nbsp;&nbsp;&nbsp;At Dshop, we're committed to providing the best customer
-                    service in the industry. If you have any questions or concerns, our friendly and knowledgeable
-                    support
-                    team is here to help. Contact us anytime and we'll be happy to assist you.</P>
+                <p>At Dshop, we're committed to providing the best customer service in the industry. If you have any
+                    questions or concerns, our friendly and knowledgeable support team is here to help. Contact us
+                    anytime and we'll be happy to assist you.</p>
+
             </div>
             <div class="col-md-5">
                 <div class="image_sec">
@@ -542,7 +540,7 @@
                 <div class="container py-5">
                     <div class="row p-2">
                         <div class="col-md-4">
-                            <img src="./img/Group 39.svg" alt="">
+                            <a class="footerLogo"onclick="scrolltoSection(navBar)"><img src="./img/Group 39.svg" alt=""></a>
                         </div>
                         <div class="col-md-2">
                             <h5 class="mb-3">COMPANY</h5>
