--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -55,7 +55,7 @@
                         </li>
                         <li>
                             <a class="nav-link active pages" aria-current="page"
-                                onclick="scrolltoSection(aboutpage)">About Us</a>
+                                onclick="scrolltoSection(aboutPage)">About Us</a>
                         </li>
                         <li class="nav-item d-md-flex d-none mb-auto ms-auto">
                             <a class="navbar-brand d-none d-lg-block" href="#"><img src="./img/Group 39.svg" alt=""></a>
@@ -202,7 +202,7 @@
                                     <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
-                                            <div class="card-box">
+                                            <div class="cardBox">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
@@ -215,7 +215,7 @@
                                     <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
-                                            <div class="card-box">
+                                            <div class="cardBox">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
@@ -228,7 +228,7 @@
                                     <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
-                                            <div class="card-box">
+                                            <div class="cardBox">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
@@ -241,7 +241,7 @@
                                     <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
-                                            <div class="card-box">
+                                            <div class="cardBox">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
@@ -254,7 +254,7 @@
                                     <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
-                                            <div class="card-box">
+                                            <div class="cardBox">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
@@ -267,7 +267,7 @@
                                     <div class="card featuredCard">
                                         <img src="./img/image 3.svg" class="card-img-top img-fluid" alt="...">
                                         <div class="card-body">
-                                            <div class="card-box">
+                                            <div class="cardBox">
                                                 <h5 class="card-title">CASUAL SHIRT</h5>
                                             </div>
                                             <p class="card-text">$1999 - <s>$2999</s></p>
@@ -318,17 +318,17 @@
                             <div class="container">
                                 <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4 g-5">
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -341,17 +341,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -364,17 +364,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -387,17 +387,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -410,17 +410,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -433,17 +433,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -456,17 +456,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -479,17 +479,17 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="card my-card2">
+                                        <div class="card shopCard">
                                             <img src="./img/Rectangle7.svg" class="card-img1 " alt="...">
-                                            <div class="card-body my-card-body2">
-                                                <div class="card-box">
+                                            <div class="card-body shopCardBody">
+                                                <div class="cardBox">
                                                     <h5 class="card-title">CASUAL SHIRT</h5>
                                                     <span class="material-icons">
                                                         favorite_border
                                                     </span>
                                                 </div>
                                                 <p class="card-text">$1999 - <s>$2999</s></p>
-                                                <div class="colorselect">
+                                                <div class="colorSelect">
                                                     <ul>
                                                         <li class="color-item" id="black"></li>
                                                         <li class="color-item" id="Feijoa"></li>
@@ -510,7 +510,7 @@
         </div>
         <!-- ========== End shopSection ========== -->
         <!-- ========== Start aboutSection ========== -->
-        <div class="row justify-content-center pb-3 pt-5 fourthpage" id="aboutpage">
+        <div class="row justify-content-center pb-3 pt-5 fourthPage" id="aboutPage">
             <div class="col-md-5">
                 <h3 class="pb-3">ABOUT DSHOP</h3>
                 <p>&emsp;&emsp;Welcome to Dshop, where you'll find everything you need to live your best life. From
@@ -528,7 +528,7 @@
 
             </div>
             <div class="col-md-5">
-                <div class="image_sec">
+                <div class="aboutImg">
                     <img src="./img/Frame 1.svg" class="img-fluid" alt="">
                 </div>
             </div>
@@ -563,10 +563,10 @@
                         <div class="col-md-4 d-flex flex-column justify-content-between">
                             <h5>Get 15 % off on your first order
                                 By subscribeing</h5>
-                            <div class="emaildiv d-flex border-bottom border-dark border-1">
-                                <input type="email" class="email_input border border-white border-1" id="email"
+                            <div class="emailSection d-flex border-bottom border-dark border-1">
+                                <input type="email" class="emailInput border border-white border-1" id="email"
                                     placeholder="Email">
-                                <button id="email_btn">
+                                <button id="emailBtn">
                                     <span class="material-icons">
                                         arrow_right_alt
                                     </span></button>
