--- a/CRUD Operation in JS/index.html
+++ b/CRUD Operation in JS/index.html
@@ -1,17 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Operation in JS</title>
 
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <!-- Custom css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    
 
+<body>
+
+    <div class="container-fluid">
+        <!-- ========== Start HeaderSection ========== -->
+        <div class="header">
+            <div class="row justify-content-center">
+                <div class="col text-center ">
+                    <h2>CRUD Operation Using JavaScript</h2>
+                    <h3>Product Management System</h3>
+                </div>
+            </div>
+        </div>
+        <!-- ========== End HeaderSection ========== -->
+        <div class="row mt-5 justify-content-evenly mx-1 mx-md-0">
+            <!-- ========== Start AddProductSection ========== -->
+            <div class="col-12 col-lg-5 addProductSec py-2 ">
+                <div class="headingSec">
+                    <h3>Add Product</h3>
+                </div>
+                <div class="bodySec">
+                    <form id="addProductForm">
+                        <div class="row mb-3">
+                            <label for="inputName" class="col-sm-3 col-form-label">Name</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="inputName" required>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label for="inputDescription" class="col-sm-3 col-form-label">Description</label>
+                            <div class="col-sm-9">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                    required></textarea>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label for="inputPrice" class="col-sm-3 col-form-label">Price</label>
+                            <div class="col-sm-9">
+                                <input type="number" class="form-control" id="inputName" required>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label for="inputImage" class="col-sm-3 col-form-label" required>Image</label>
+                            <div class="col-sm-9">
+                                <input type="file" class="form-control" id="inputName" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary" form="addProductForm"
+                            value="Submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+            <!-- ========== End AddProductSection ========== -->
+            <!-- ========== Start ViewProductSection ========== -->
+
+            <!-- ========== End ViewProductSection ========== -->
+            <div class="col-12 col-lg-6 viewProductSection mt-4 mt-lg-0 py-2 table-responsive">
+                <div class="headingSec">
+                    <h3>Product Details</h3>
+                </div>
+                <div class="bodySec">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Image</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry the Bird</td>
+                                <td>@twitter</td>
+                                <td>@twitter</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
+    <!-- Custom JS -->
     <script src="./js/app.js"></script>
 </body>
+
 </html>
